--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
     "serialport": "~4.0.0",
-    "stylus": "0.54.5"
+    "serve-favicon": "~2.3.0",
+    "stylus": "0.54.5",
+    "therm-ds18b20": "^0.1.0"
   }
 }
